# crm

./: .gitignore  LICENSE  README.md  crm  crm_entry.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
crm/: __init__.py  cli.py  contacts.py  display.py  due.py  mail.py  notes.py  stages.py  storage.py  update.py
crm/storage/: __init__.py  errors.py  local.py  s3.py
