[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "crm"
dynamic = ["version"]
description = "lightweight CLI pipeline tracker for solo consultants and freelancers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Eemil Kiviahde", email = "eemil.kiviahde@kitron.dev" }]
dependencies = [
    "boto3>=1.34",
]

[project.scripts]
crm = "crm.cli:main"

[project.urls]
Homepage = "https://github.com/Kitron-Consulting/crm"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "crm/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["crm"]
